--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   table_calendar: ^3.0.9
   flutter_rating_bar: ^4.0.1
   shared_preferences: ^2.2.2
+  flutter_staggered_animations: ^1.1.1
 
 dev_dependencies:
   flutter_test:
